# PolyChip

./: .gitignore  .gitmodules  README.md  flake.nix  run_six_configs_to_csv.py  sourceme.sh
.claude/: CLAUDE.md
.github/workflows/: test.yml
arch/: .gitignore  build.sbt  build.sc
arch/src/csrc/include/: bdb.h
arch/src/csrc/src/: main.cc
bb-tests/: CMakeLists.txt
bb-tests/workloads/: CMakeLists.txt
bb-tests/workloads/lib/bbhw/isa/: 48_im2col.c  80_gemmini_loop_ws.c  96_gemmini_loop_conv_ws.c  isa.h
bb-tests/workloads/lib/bbsw/: test.h
bb-tests/workloads/lib/bbsw/baremetal/: crt0.S  test.c
bb-tests/workloads/lib/bbsw/linux/: test.c
bb-tests/workloads/src/CTest/: CMakeLists.txt
bb-tests/workloads/src/CTest/DNNTest/: CMakeLists.txt  top.c
bb-tests/workloads/src/CTest/DNNTest/LeNet/: lenet.c
bb-tests/workloads/src/CTest/DNNTest/MobileNet/: mobilenet.c
bb-tests/workloads/src/CTest/DNNTest/ResNet/: resnet.c
bb-tests/workloads/src/CTest/DNNTest/params/: lenet_params.h  mobilenet_params.h  resnet_params.h
bb-tests/workloads/src/CTest/DNNTest/support/: dnn.c  dnn.h
bb-tests/workloads/src/CTest/chipyard/: CMakeLists.txt  batch_matmul.c
bb-tests/workloads/src/CTest/coremark/: CMakeLists.txt
bb-tests/workloads/src/CTest/coremark/buckyball/: core_portme.c  core_portme.h  main.c
bb-tests/workloads/src/CTest/coremark/src/: core_list_join.c  core_main.c  core_matrix.c  core_state.c  core_util.c  coremark.h
bb-tests/workloads/src/CTest/embench/: CMakeLists.txt
bb-tests/workloads/src/CTest/embench/support/: top.c
bb-tests/workloads/src/CTest/goban/: CMakeLists.txt  batch_matmul.c  goban.h  hetero_64t4c_smoke_test.c  scu.h  start.S  uart_rx_echo_test.c
bb-tests/workloads/src/CTest/toy/: CMakeLists.txt  batch_matmul.c  bbsim.ld  crt0.S  gemmini_os_cisc_basic_test.c  gemmini_os_cisc_shift_test.c  gemmini_os_risc_basic_test.c  gemmini_os_risc_shift_test.c  gemmini_ws_cisc_conv_test.c  im2col_test.c  scu_uart_rx_echo_test.c  transpose_matmul.c
bb-tests/workloads/src/CTest/toy/embench/: README.md
bb-tests/workloads/src/CTest/toy/embench/src/aha-mont64/: mont64.c
bb-tests/workloads/src/CTest/toy/embench/src/crc32/: crc_32.c
bb-tests/workloads/src/CTest/toy/embench/src/cubic/: basicmath_small.c  libcubic.c  pi.h  snipmath.h  sniptype.h
bb-tests/workloads/src/CTest/toy/embench/src/edn/: libedn.c
bb-tests/workloads/src/CTest/toy/embench/src/huffbench/: libhuffbench.c
bb-tests/workloads/src/CTest/toy/embench/src/matmult-int/: matmult-int.c
bb-tests/workloads/src/CTest/toy/embench/src/md5sum/: md5.c
bb-tests/workloads/src/CTest/toy/embench/src/minver/: libminver.c
bb-tests/workloads/src/CTest/toy/embench/src/nbody/: nbody.c
bb-tests/workloads/src/CTest/toy/embench/src/nettle-aes/: nettle-aes.c
bb-tests/workloads/src/CTest/toy/embench/src/nettle-sha256/: nettle-sha256.c
bb-tests/workloads/src/CTest/toy/embench/src/nsichneu/: libnsichneu.c
bb-tests/workloads/src/CTest/toy/embench/src/picojpeg/: libpicojpeg.c  picojpeg.h  picojpeg_test.c
bb-tests/workloads/src/CTest/toy/embench/src/primecount/: primecount.c
bb-tests/workloads/src/CTest/toy/embench/src/qrduino/: ecctable.h  qrbits.h  qrencode.c  qrencode.h  qrframe.c  qrtest.c
bb-tests/workloads/src/CTest/toy/embench/src/sglib-combined/: combined.c  sglib.h
bb-tests/workloads/src/CTest/toy/embench/src/slre/: libslre.c  slre.h
bb-tests/workloads/src/CTest/toy/embench/src/st/: libst.c
bb-tests/workloads/src/CTest/toy/embench/src/statemate/: libstatemate.c
bb-tests/workloads/src/CTest/toy/embench/src/tarfind/: tarfind.c
bb-tests/workloads/src/CTest/toy/embench/src/ud/: libud.c
bb-tests/workloads/src/CTest/toy/embench/src/wikisort/: libwikisort.c
bb-tests/workloads/src/CTest/toy/embench/support/: beebsc.c  beebsc.h  boardsupport.c  boardsupport.h  chipsupport.c  chipsupport.h  main.c  support.h
bb-tests/workloads/src/ModelTest/: CMakeLists.txt
bb-tests/workloads/src/OpTest/: CMakeLists.txt
bb-tests/workloads/src/OpTest/buckyball/: CMakeLists.txt  bank_im2col_contract.mlir  matmul_1x128_128x96.mlir  matmul_1x128_128x96_main.c
bb-tests/workloads/src/OpTest/linalg/: CMakeLists.txt  conv2d_nchw_fchw.mlir  conv2d_nchw_fchw_contract.mlir  conv2d_nchw_main.c  conv2d_nhwc_fhwc.mlir  conv2d_nhwc_fhwc_contract.mlir  conv2d_nhwc_hwcf.mlir  conv2d_nhwc_hwcf_contract.mlir  conv2d_nhwc_main.c
bb-tests/workloads/src/OpTest/tile/: CMakeLists.txt  conv2d_nhwc_hwcf_contract.mlir
bb-tests/workloads/src/tutorial/: CMakeLists.txt
compiler/src/: CMakeLists.txt
compiler/src/Backend/include/: IntrinsicsRISCVBuckyball.td  IntrinsicsRISCVBuckyballBase.td  (+7 more)
compiler/src/Conversion/: CMakeLists.txt
compiler/src/Dialect/: CMakeLists.txt
compiler/src/Dialect/Buckyball/: Buckyball.td  BuckyballBankSSA.td  BuckyballBase.td  BuckyballDialect.h  BuckyballIntrinsics.td  BuckyballOps.h  BuckyballOps.td  CMakeLists.txt  DequantBall.td  Im2colBall.td  QuantBall.td  ReluBall.td  SystolicArrayBall.td  Transform.h  TransposeBall.td  VecBall.td
compiler/src/Dialect/Buckyball/IR/: BuckyballDialect.cpp
compiler/src/Dialect/Buckyball/Transforms/: LegalizeForLLVMExport.cpp
compiler/src/Utils/: BankUtils.h
io_sim/: IO_CHIPLET_DEMO.md  build_io_sim  io_sim_config.json  run_io_sim
scripts/claude/: README.md  mcp_server.py
scripts/nix/: build-all.sh  build-env-clibs.nix  build-env-compiler.nix  build-env-doc.nix  build-env-python.nix  build-env-tools.nix  overlay.nix
scripts/poly/: analysis.py  analysis.toml  demo.py  demo_bake1.py  run_all_staggered.sh
scripts/scale/: analyze.py  build.sh  demo.sh  run.sh
scripts/scale/config/: config.yaml
tsv-tools/: .gitignore  CLAUDE.md  HARDCODED_PARAMS.md  HOW_TO_RUN_PROJECT_UNDER_WINDOWS.md  batch_experiment_method_mt_0.py  batch_experiment_method_mt_1.py  run_six_configs_to_csv.py
tsv-tools/docs/: hardcoded-parameters.md  hardcoded-parameters_zh.md  problem-setting.md  problem-setting_zh.md  report-unfinished-sections-draft.md  roadmap.md  threejs-instancedmesh-notes.md  web-visualization.md
tsv-tools/include/: request.hpp
(+161 files in other folders)
